changes to script and css

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
 body {
   background-color: blue;
 }
+header {
+  background-color: yellow;
+}
+header .h1{
+  font-size: 14px;
+  color: green;
+  font-family: sans-serif;
+}
