--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,25 @@
 body {
-  background-color: blue;
+  padding: 0;
+  margin: 0;
+  overflow-y: scroll;
+  font-family: Arial;
+  font-size: 18px;
 }
 header {
-  background-color: yellow;
+  background-color: rgb(93, 185, 66);
 }
 header h1{
   font-size: 30px;
   color: green;
-  font-family: sans-serif;
+  font-family: Arial;
+  text-align: center;
 }
 nav{
-  background-color: grey;
+  background-color: #222;
 }
-#menu li{
-  display: inline;
-  font-size: 24px;
-  color: white;
+
+#nav_wrapper{
+  width: 960px;
+  margin: 0 auto;
+  text-align: left;
 }
