--- a/css/main.css
+++ b/css/main.css
@@ -3,14 +3,14 @@ body {
   margin: 0;
   overflow-y: scroll;
   font-family: Arial;
-  font-size: 18px;
+  font-size: 24px;
 }
 header {
   background-color: rgb(93, 185, 66);
 }
 header h1{
   font-size: 30px;
-  color: green;
+  color: white;
   font-family: Arial;
   text-align: center;
 }
@@ -22,4 +22,59 @@ nav{
   width: 960px;
   margin: 0 auto;
   text-align: left;
+}
+
+nav ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  min-width: 200px;
+}
+
+nav ul li{
+  display: inline-block;
+
+}
+
+nav ul li:hover{
+  background-color: #333;
+}
+
+nav ul li a, visited{
+  color: #ccc;
+  display: block;
+  padding 15px;
+  text-decoration: none;
+}
+
+nav ul li a:hover{
+  color: #ccc;
+  text-decoration: none;
+}
+
+nav ul li:hover ul{
+  display: block;
+}
+
+nav ul ul{
+  display: none;
+  position: absolute;
+  background-color: #333;
+  border: 5px solid #222;
+  border-top: 0;
+  margin-left: -5px;
+
+}
+
+nav ul ul li{
+  display: block;
+}
+
+nav ul ul li a,visited{
+  color: #ccc;
+}
+
+nav ul ul li a:hover{
+  color: #099
 }
