--- a/css/main.css
+++ b/css/main.css
@@ -5,76 +5,21 @@ body {
   font-family: Arial;
   font-size: 24px;
 }
-header {
-  background-color: rgb(93, 185, 66);
-}
-header h1{
-  font-size: 30px;
-  color: white;
-  font-family: Arial;
-  text-align: center;
-}
+
 nav{
   background-color: #222;
 }
 
-#nav_wrapper{
-  width: 960px;
-  margin: 0 auto;
-  text-align: left;
+.jumbotron{
+  background-color: yellow;
+  font-family: sans-serif;
+  text-align: center;
 }
 
-nav ul{
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  position: relative;
-  min-width: 200px;
+.jumbotron h1{
+  font-size: 30px;
 }
 
-nav ul li{
-  display: inline-block;
-
-}
-
-nav ul li:hover{
-  background-color: #333;
-}
-
-nav ul li a, visited{
-  color: #ccc;
-  display: block;
-  padding 15px;
-  text-decoration: none;
-}
-
-nav ul li a:hover{
-  color: #ccc;
-  text-decoration: none;
-}
-
-nav ul li:hover ul{
-  display: block;
-}
-
-nav ul ul{
-  display: none;
-  position: absolute;
-  background-color: #333;
-  border: 5px solid #222;
-  border-top: 0;
-  margin-left: -5px;
-
-}
-
-nav ul ul li{
-  display: block;
-}
-
-nav ul ul li a,visited{
-  color: #ccc;
-}
-
-nav ul ul li a:hover{
-  color: #099
+.jumbotron p{
+  font-size: 20px;
 }
