--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,7 @@ body {
   overflow-y: scroll;
   font-family: Arial;
   font-size: 24px;
-}
-
-nav{
-  background-color: #222;
+  height: 100%;
 }
 
 .jumbotron{
@@ -27,4 +24,9 @@ nav{
 footer{
   text-align: center;
   background-color: gray;
+  height: 4em;
+}
+
+button{
+  border-color: white;
 }
