--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ body {
   overflow-y: scroll;
   font-family: Arial;
   font-size: 24px;
-  height: 100%;
 }
 
 .jumbotron{
@@ -24,9 +23,8 @@ body {
 footer{
   text-align: center;
   background-color: gray;
-  height: 4em;
 }
 
-button{
-  border-color: white;
+footer h4{
+  color: #40ffff;
 }
