--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
   overflow-y: scroll;
   font-family: Arial;
   font-size: 24px;
+  background-color: beige;
 }
 
 .jumbotron{
@@ -20,4 +21,22 @@ body {
   font-size: 20px;
 }
 
+footer{
+  text-align: center;
+  background-color: gray;
+  position: fixed;
+  padding-bottom: 0px;
+  width: 100%;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+}
 
+footer h4{
+  color: #40ffff;
+}
+
+footer p{
+	color: #ffffff;
+}
