--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,11 @@ body {
   height: 400px;
 }
 
-footer{
+.container{
+  padding-bottom: 100px;
+}
+
+.site-footer{
   text-align: center;
   background-color: gray;
   position: fixed;
@@ -66,10 +70,10 @@ footer{
   margin-bottom: 0px;
 }
 
-footer h4{
+.site-footer h4{
   color: #40ffff;
 }
 
-footer p{
+.site-footer p{
 	color: #ffffff;
 }
