--- a/css/main.css
+++ b/css/main.css
@@ -34,13 +34,13 @@ body {
 }
 
 .carousel{
-  padding-bottom: 175px;
+  padding-bottom: 150px;
 }
 
 .site-footer{
   text-align: center;
   background-color: gray;
-  position: fixed;
+  position: relative;
   padding-bottom: 0px;
   width: 100%;
   bottom: 0px;
