--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,6 @@ body {
   padding: 0;
   margin: 0;
   overflow-y: scroll;
-  font-family: Arial;
-  font-size: 24px;
   background-color: beige;
 }
 
@@ -21,6 +19,10 @@ body {
 
 .navbar-inverse .navbar-toggle .icon-bar{
   background-color: #13EAB0;
+}
+
+.dropdown:hover{
+  background-color: #00ff00
 }
 
 .jumbotron{
