--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ body {
 .site-footer{
   text-align: center;
   background-color: gray;
-  position: relative;
+  position: absolute;
   padding-bottom: 0px;
   width: 100%;
   bottom: 0px;
