footer contact style

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,10 @@ body {
 	color: #ffffff;
 }
 
+.site-footer ul li{
+  display: inline-block;
+}
+
 @media only screen and (max-device-width: 480px) {
     .site-footer{
       position: absolute;
