--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,11 @@ body {
   font-size: 20px;
 }
 
+.projects h3{
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 .skills p{
   font-weight: bold;
 }
